--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/PrestamosMasivos/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/PrestamosMasivos/Index.cshtml
@@ -11,7 +11,6 @@
 
 @using (Html.BeginForm())
 {
-
     <div class="box ">
         <div class="box-header with-border">
             <div class="row">
@@ -30,15 +29,53 @@
         </div>
         <div class="box-body">
             <div class="row">
-                <div class="col-md-12">
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <label for="">Empleado*</label>
-                            @Html.Partial("_CmbEmpleado_prestamos", Model.IdEmpleado)
-                            @Html.ValidationMessageFor(q => q.IdEmpleado, "", new { @class = "text-danger" })
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <label for="IdRubro">Sucursal</label>
+                        @Html.Partial("_CmbSucursal", Model.IdSucursal)
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="form-group">
+                        <label for="">Fecha inicio*</label>
+                        <div class="input-group date">
+                            <div class="input-group-addon">
+                                <i class="fa fa-calendar"></i>
+                            </div>
+                            @Html.DevExpress().DateEditFor(q => q.fecha_ini, settings =>
+                           {
+                               settings.Name = "fecha_ini";
+                               settings.Properties.UseMaskBehavior = true;
+                               settings.Properties.EditFormat = EditFormat.Date;
+                               settings.Properties.EditFormatString = "dd/MM/yyyy";
+                               settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                               settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                           }).GetHtml()
+                            @Html.ValidationMessageFor(q => q.fecha_ini, "", new { @class = "text-danger" })
                         </div>
                     </div>
-                </div>                      
+                </div>
+                <div class="col-md-2">
+                    <div class="form-group">
+                        <label for="">Fecha fin*</label>
+                        <div class="input-group date">
+                            <div class="input-group-addon">
+                                <i class="fa fa-calendar"></i>
+                            </div>
+                            @Html.DevExpress().DateEditFor(q => q.fecha_fin, settings =>
+                           {
+                               settings.Name = "fecha_fin";
+                               settings.Properties.UseMaskBehavior = true;
+                               settings.Properties.EditFormat = EditFormat.Date;
+                               settings.Properties.EditFormatString = "dd/MM/yyyy";
+                               settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                               settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                           }).GetHtml()
+                            @Html.ValidationMessageFor(q => q.fecha_fin, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
         <!-- /.box-body -->
@@ -57,7 +94,7 @@
             </div>
         </div>
         <div class="box-body">
-            @Html.Action("GridViewPartial_prestamos_masivos", new { IdEmpleado = Model.IdEmpleado})
+            @Html.Action("GridViewPartial_prestamos_masivos", new { Fecha_ini = Model.fecha_ini, Fecha_fin = Model.fecha_fin, IdSucursal = Model.IdSucursal })
         </div>
         <!-- /.box-body -->
         <div class="box-footer">
