--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/PrestamosMasivos/_GridViewPartial_prestamos_masivos.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/PrestamosMasivos/_GridViewPartial_prestamos_masivos.cshtml
@@ -2,7 +2,7 @@
     @{
         var grid = Html.DevExpress().GridView(settings => {
             settings.Name = "GridViewPartial_prestamos_masivos";
-            settings.CallbackRouteValues = new { Controller = "Prestamos", Action = "GridViewPartial_prestamos_masivos", IdEmpleado = ViewBag.IdEmpleado };
+            settings.CallbackRouteValues = new { Controller = "Prestamos", Action = "GridViewPartial_prestamos_masivos", Fecha_ini = ViewBag.fecha_ini, Fecha_fin = ViewBag.fecha_fin, IdSucursal = ViewBag.IdSucursal };
 
             settings.Width = Unit.Percentage(100);
             settings.KeyFieldName = "IdPrestamo";
@@ -69,11 +69,11 @@
                 c.Caption = "#";
                 c.SetDataItemTemplateContent(tc =>
                 {
-                    if (Convert.ToBoolean(DataBinder.Eval(tc.DataItem, "Estado")) == true && Convert.ToString(DataBinder.Eval(tc.DataItem, "EstadoAprob")) == "PEND" && Convert.ToInt32(DataBinder.Eval(tc.DataItem, "TotalCobrado")) == 0)
+                    if (Convert.ToBoolean(DataBinder.Eval(tc.DataItem, "Estado")) == true)
                     {
                         ViewContext.Writer.Write(
-                             Html.ActionLink("Modificar", "Modificar", new { IdEmpleado = DataBinder.Eval(tc.DataItem, "IdEmpleado"), IdPrestamo = DataBinder.Eval(tc.DataItem, "IdPrestamo") }) + "&nbsp;" +
-                             Html.ActionLink("Anular", "Anular", new { IdEmpleado = DataBinder.Eval(tc.DataItem, "IdEmpleado"), IdPrestamo = DataBinder.Eval(tc.DataItem, "IdPrestamo") },
+                             Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdSucursal = DataBinder.Eval(tc.DataItem, "IdSucursal"), IdCarga = DataBinder.Eval(tc.DataItem, "IdCarga") }) + "&nbsp;" +
+                             Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdSucursal = DataBinder.Eval(tc.DataItem, "IdSucursal"), IdCarga = DataBinder.Eval(tc.DataItem, "IdCarga") },
                                 new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
                         );
                     }
@@ -91,27 +91,12 @@
                 c.Width = Unit.Pixel(100);
             });
 
-            settings.Columns.Add("IdPrestamo","ID").Width=Unit.Percentage(5);
-            settings.Columns.Add("pe_nombre_completo","Empleado").Width = Unit.Percentage(15);
-            settings.Columns.Add("ru_descripcion", "Rubro").Width = Unit.Percentage(10);
-            settings.Columns.Add("Observacion", "Observación").Width = Unit.Percentage(15);            
-            settings.Columns.Add(column =>
-            {
-                column.FieldName = "Fecha_Transac";
-                column.Caption = "Transacción";
-                column.Width = Unit.Percentage(9);
-                column.PropertiesEdit.DisplayFormatString = "d";
-                column.EditorProperties().DateEdit(sp =>
-                {
-                    column.PropertiesEdit.DisplayFormatString = "d";
-                    sp.Width = Unit.Percentage(100);
-                });
-            });
+            settings.Columns.Add("IdCarga", "ID").Width=Unit.Percentage(5);
             settings.Columns.Add(column =>
             {
                 column.FieldName = "Fecha_PriPago";
                 column.Caption = "1º Pago";
-                column.Width = Unit.Percentage(9);
+                column.Width = Unit.Percentage(10);
                 column.PropertiesEdit.DisplayFormatString = "d";
                 column.EditorProperties().DateEdit(sp =>
                 {
@@ -123,7 +108,7 @@
             {
                 column.FieldName = "MontoSol";
                 column.Caption = "$Monto";
-                column.Width = Unit.Percentage(7);
+                column.Width = Unit.Percentage(10);
                 column.EditorProperties().SpinEdit(sp =>
                 {
                     sp.MinValue = 0;
@@ -135,66 +120,52 @@
             });
             settings.Columns.Add(column =>
             {
-                column.FieldName = "TotalCobrado";
-                column.Caption = "$Abonado";
-                column.Width = Unit.Percentage(7);
+                column.FieldName = "NumCuotas";
+                column.Caption = "# Cuotas";
+                column.Width = Unit.Percentage(8);
                 column.EditorProperties().SpinEdit(sp =>
                 {
                     sp.MinValue = 0;
                     sp.MaxValue = 999999999;
                     sp.Width = Unit.Percentage(100);
-                    column.PropertiesEdit.DisplayFormatString = "n2";
+                    //column.PropertiesEdit.DisplayFormatString = "n2";
 
                 });
             });
             settings.Columns.Add(column =>
             {
-                column.FieldName = "Valor_pendiente";
-                column.Caption = "$Saldo";
-                column.Width = Unit.Percentage(7);
-                column.EditorProperties().SpinEdit(sp =>
+                column.FieldName = "descuento_quincena";
+                column.Caption = "Desc quincena";
+                column.Width = System.Web.UI.WebControls.Unit.Percentage(8);
+                column.EditorProperties().CheckBox(sp =>
                 {
-                    sp.MinValue = 0;
-                    sp.MaxValue = 999999999;
-                    sp.Width = Unit.Percentage(100);
-                    column.PropertiesEdit.DisplayFormatString = "n2";
 
                 });
-            });
-            settings.Columns.Add("EstadoCancelacion", "Est Canc").Width = Unit.Percentage(6);
-            settings.Columns.Add(c =>
-            {
-                c.Caption = "Aplicar";
-                c.SetDataItemTemplateContent(tc =>
-                {
-                    if (Convert.ToBoolean(DataBinder.Eval(tc.DataItem, "Estado")) == true && Convert.ToString(DataBinder.Eval(tc.DataItem, "EstadoAprob")) == "APROB"  && Convert.ToInt32(DataBinder.Eval(tc.DataItem, "Valor_pendiente")) > 0)
-                    {
-                        ViewContext.Writer.Write(
-                             Html.ActionLink("Abono", "Abono", new { IdEmpleado = DataBinder.Eval(tc.DataItem, "IdEmpleado"), IdPrestamo = DataBinder.Eval(tc.DataItem, "IdPrestamo") })
-                        );
-                    }
-
-                });
-
-                c.Settings.AllowDragDrop = DefaultBoolean.False;
-                c.Settings.AllowSort = DefaultBoolean.False;
-                c.Width = Unit.Percentage(5);
-            });
-
-
-
-
-            settings.Columns.Add(column =>
-            {
-                column.SetDataItemTemplateContent(c =>
-                {
-                    ViewContext.Writer.Write("<span class=\"glyphicon  glyphicon-print\" onclick=\"OpenInNewTabWinBrowser('" + Url.Action("ROL_008", "RRHHReportes", new { Area = "Reportes", IdPrestamo = DataBinder.Eval(c.DataItem, "IdPrestamo") }, Request.Url.Scheme) + "');\"></span>");
-                });
-                column.Width = System.Web.UI.WebControls.Unit.Percentage(4);
             });
             settings.Columns.Add(column =>
             {
-                column.FieldName = "EstadoBool";
+                column.FieldName = "descuento_mensual";
+                column.Caption = "Desc mensual";
+                column.Width = System.Web.UI.WebControls.Unit.Percentage(8);
+                column.EditorProperties().CheckBox(sp =>
+                {
+
+                });
+            });
+            settings.Columns.Add(column =>
+            {
+                column.FieldName = "descuento_men_quin";
+                column.Caption = "Desc mensual y quinc";
+                column.Width = System.Web.UI.WebControls.Unit.Percentage(8);
+                column.EditorProperties().CheckBox(sp =>
+                {
+
+                });
+            });
+            settings.Columns.Add("Observacion", "Observación").Width = Unit.Percentage(20);
+            settings.Columns.Add(column =>
+            {
+                column.FieldName = "Estado";
                 column.Caption = "Estado";
                 column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
                 column.EditorProperties().CheckBox(sp =>
