--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/PrestamosMasivos/_CmbEmpleado_PrestamosMasivos.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/PrestamosMasivos/_CmbEmpleado_PrestamosMasivos.cshtml
@@ -7,7 +7,7 @@
         settings.Width = Unit.Percentage(100);
         settings.Properties.DropDownWidth = Unit.Percentage(100);
         settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-        settings.CallbackRouteValues = new { Controller = "Prestamos", Action = "CmbEmpleado_prestamos", Area = "RRHH" };
+        settings.CallbackRouteValues = new { Controller = "PrestamosMasivos", Action = "CmbEmpleado_PrestamosMasivos", Area = "RRHH" };
         settings.Properties.CallbackPageSize = 15;
         settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.Contains;
         settings.Properties.TextField = "pe_nombreCompleto";
@@ -23,8 +23,8 @@
         settings.Properties.FilterMinLength = 3;
 
     })
-    .BindList(new Core.Erp.Web.Areas.RRHH.Controllers.PrestamosController().get_list_bajo_demanda, new Core.Erp.Web.Areas.RRHH.Controllers.PrestamosController().get_info_bajo_demanda)
-    .Bind(Model.GetType() == typeof(Core.Erp.Info.RRHH.ro_prestamo_Info) ? "" : (Model == 0 ? "" : Model));
+    .BindList(new Core.Erp.Web.Areas.RRHH.Controllers.PrestamosMasivosController().get_list_bajo_demanda, new Core.Erp.Web.Areas.RRHH.Controllers.PrestamosMasivosController().get_info_bajo_demanda)
+    .Bind(Model.GetType() == typeof(Core.Erp.Info.RRHH.ro_PrestamoMasivo_Det_Info) ? "" : (Model == 0 ? "" : Model));
 
 }
 @comboBox.GetHtml()
