--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/FacturacionReportes/FAC_018.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/FacturacionReportes/FAC_018.cshtml
@@ -181,6 +181,8 @@
                                    }
                                    listBoxSettings.Properties.ClientSideEvents.SelectedIndexChanged = "updateTipoText";
                                    listBoxSettings.Properties.ClientSideEvents.Init = "updateTipoText";
+                                   //listBoxSettings.Properties.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['CreDeb'] =  $('#CreDeb').val(); }";
+                                   //listBoxSettings.Properties.ClientSideEvents.EndCallback = "function(s, e){ IntTipoArray.PerformCallback(); } ";
                                }).Render();
                                ViewContext.Writer.Write("<div style=\"margin: 6px; overflow: hidden;\">");
                                @Html.DevExpress().Button(buttonSettings =>
@@ -305,9 +307,13 @@
 <script type="text/javascript">
     $(function () {
         $("#CreDeb").change(function () {
-            //GetTipoNota();
+            GetTipoNota();
         });
     });
+
+    function OnBeginCallback(s, e) {
+        e.customArgs["CreDeb"] = $("#CreDeb").val();
+    }
 
     function GetTipoNota() {
         var datos = {
@@ -321,7 +327,8 @@
             dataType: 'json',
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
-                BeginCallback();
+                console.log(data);
+                //IntTipoArray.PerfomanCallBack();
             },
             error: function (error) {
             }
