--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/DevolucionInventario/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/DevolucionInventario/Anular.cshtml
@@ -83,7 +83,7 @@
 
     @Html.HiddenFor(q => q.IdEmpresa)
     @Html.HiddenFor(q => q.IdDev_Inven)
-
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     @Html.HiddenFor(q => q.IdEmpresa_inv)
     @Html.HiddenFor(q => q.IdSucursal_inv)
     @Html.HiddenFor(q => q.IdMovi_inven_tipo_inv)
