--- a/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/_GridViewPartial_conciliacion_caja.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/_GridViewPartial_conciliacion_caja.cshtml
@@ -53,6 +53,10 @@
                         {
                             e.Row.ForeColor = System.Drawing.Color.Blue;
                         }
+                        if (Convert.ToString(e.GetValue("IdEstadoCierre")) == "EST_CIE_ANU")
+                        {
+                            e.Row.ForeColor = System.Drawing.Color.Red;
+                        }
                     };
                     settings.Columns.Add(c =>
                     {
@@ -76,7 +80,7 @@
                 });
                 c.Settings.AllowDragDrop = DefaultBoolean.False;
                 c.Settings.AllowSort = DefaultBoolean.False;
-                c.Width = Unit.Pixel(100);
+                c.Width = Unit.Pixel(150);
             });
 
         settings.Columns.Add("IdConciliacion_Caja","ID").Width = Unit.Percentage(5);
@@ -86,17 +90,17 @@
             column.FieldName = "Fecha_ini";
             column.Caption = "Desde";
             column.PropertiesEdit.DisplayFormatString = "{0:dd/MM/yyyy}";
-            column.Width = Unit.Percentage(10);
+            column.Width = Unit.Percentage(8);
         });
         settings.Columns.Add(column =>
         {
             column.FieldName = "Fecha_fin";
             column.Caption = "Hasta";
             column.PropertiesEdit.DisplayFormatString = "{0:dd/MM/yyyy}";
-            column.Width = Unit.Percentage(10);
+            column.Width = Unit.Percentage(8);
         });
         settings.Columns.Add("IdEstadoCierre","Estado").Width = Unit.Percentage(10);
-        settings.Columns.Add("Observacion", "Observación").Width = Unit.Percentage(30);
+        settings.Columns.Add("Observacion", "Observación").Width = Unit.Percentage(20);
         settings.Columns.Add(column =>
         {
             column.FieldName = "Ingresos";
