--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/AjusteFisicoInventario/_GridViewPartial_ajuste_fisico_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/AjusteFisicoInventario/_GridViewPartial_ajuste_fisico_det.cshtml
@@ -29,14 +29,34 @@
         settings.SettingsAdaptivity.AdaptiveDetailColumnCount = 1;
         settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
+        settings.Settings.ShowFilterRow = true;
 
-   
-
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "IdCategoria";
+            column.Caption = "";
+            column.Width = Unit.Percentage(20);
+            column.GroupIndex = 0;
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "IdLinea";
+            column.Caption = "";
+            column.Width = Unit.Percentage(20);
+            column.GroupIndex = 1;
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "pr_codigo";
+            column.Caption = "Código";
+            column.Width = Unit.Percentage(10);
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+        });
         settings.Columns.Add(column =>
         {
             column.FieldName = "pr_descripcion";
             column.Caption = "Producto";
-            column.Width = Unit.Percentage(60);
+            column.Width = Unit.Percentage(40);
             column.EditFormSettings.Visible = DefaultBoolean.False;
         });
 
@@ -56,7 +76,7 @@
         {
             column.FieldName = "IdUnidadMedida";
             column.Caption = "Unidad de medida";
-            column.Width = Unit.Percentage(20);
+            column.Width = Unit.Percentage(10);
             column.EditFormSettings.Visible = DefaultBoolean.False;
             column.EditorProperties().ComboBox(p =>
             {
@@ -99,7 +119,25 @@
             column.Width = Unit.Percentage(15);
             column.EditFormSettings.Visible = DefaultBoolean.False;
         });
+
+        settings.PreRender = (sender, e) =>
+        {
+            MVCxGridView gridView = (MVCxGridView)sender;
+            gridView.ExpandAll();
+        };
+
+        settings.BeforeGetCallbackResult = (sender, e) =>
+        {
+            MVCxGridView gridView = (MVCxGridView)sender;
+            gridView.ExpandAll();
+        };
         settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
 }
 @grid.Bind(Model).GetHtml()
+
+<script>
+    function UnidadMedidaComboBox_BeginCallback(s, e) {
+        e.customArgs["in_IdProducto"] = IdProducto.GetValue();
+    }
+</script>
