--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/Cobranza/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/Cobranza/Modificar.cshtml
@@ -223,7 +223,7 @@
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                     <h4 class="modal-title">Facturas</h4>
-                    <label id="TotalRows"></label>
+                    <h4 id="TotalRows" align="right"></h4>
                 </div>
                 <div class="modal-body">
 
