--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Index3.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Index3.cshtml
@@ -191,7 +191,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <h4 class="modal-title">Facturas con saldos</h4>
-                        <label id="TotalRows"></label>
+                        <h4 id="TotalRows" align="right"></h4>
                     </div>
                     <div class="row">
                         <div class="col-md-12">
