--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/_GridViewPartial_facturas_con_saldos.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/_GridViewPartial_facturas_con_saldos.cshtml
@@ -7,7 +7,7 @@
         settings.KeyFieldName = "SecuencialID";
 
         settings.SettingsBehavior.AllowGroup = true;
-        settings.Settings.ShowGroupPanel = true;
+        settings.Settings.ShowGroupPanel = false;
 
         //Configuración click derecho
         settings.SettingsContextMenu.Enabled = true;
