--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/INV_005.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/INV_005.cshtml
@@ -153,7 +153,7 @@
 }
     <script>
     $(function () {
-        cargar_bodega();
+        //cargar_bodega();
     });
 
     $("#IdSucursal").change(function () {
