--- a/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/_GridViewPartial_conciliacion_vales.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/_GridViewPartial_conciliacion_vales.cshtml
@@ -28,7 +28,7 @@
 
         settings.SettingsPager.Visible = true;
         settings.Settings.ShowGroupPanel = false;
-        settings.SettingsBehavior.AllowSelectByRowClick = true;
+        settings.SettingsBehavior.AllowSelectByRowClick = false;
 
         //Configuracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
