--- a/ERP/Core.Erp.Web/Areas/General/Views/ReportesPorUsuario/_GridViewPartial_ReportesAsignados.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/ReportesPorUsuario/_GridViewPartial_ReportesAsignados.cshtml
@@ -18,6 +18,7 @@
         settings.Settings.ShowGroupPanel = false;
         settings.Settings.ShowFilterRow = true;
         settings.SettingsBehavior.AllowSelectByRowClick = false;
+        settings.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
 
         //Configuración click derecho
         settings.SettingsContextMenu.Enabled = true;
