--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/LiquidacionRetencionCliente/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/LiquidacionRetencionCliente/Anular.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.CuentasPorCobrar.cxc_LiquidacionRetProv_Info
 @{
-    ViewBag.Title = "Nueva liquidacion de retenciones a clientes";
+    ViewBag.Title = "Anular liquidacion de retenciones a clientes";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
@@ -8,103 +8,11 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
-<script type="text/javascript">
-    var selectedIDs;
-    $(function () {
-    })
-
-    function OnBeginCallback(s, e) {
-        //Pass all selected keys to GridView callback action
-        e.customArgs["selectedIDs"] = selectedIDs;
-    }
-    function OnSelectionChanged(s, e) {
-        s.GetSelectedFieldValues("SecuencialCobro", GetSelectedFieldValuesCallback);
-    }
-    function GetSelectedFieldValuesCallback(values) {
-        //Capture all selected keys
-        selectedIDs = values.join(',');
-    }
-
-    function MostrarModal() {
-        selectedIDs = "";
-        var datos = {
-            IdTransaccionSession: $("#IdTransaccionSession").val(),
-            IdEmpresa: $("#IdEmpresa").val(),
-            IdSucursal: $("#IdSucursal").val()
-        }
-        $.ajax({
-            type: 'POST',
-            data: JSON.stringify(datos),
-            url: '@Url.Action("GetList_Liquidaciones_x_Cruzar", "LiquidacionRetencionCliente", new { Area = "CuentasPorCobrar" })',
-            async: false,
-            bDeferRender: true,
-            bProcessing: true,
-            dataType: 'json',
-            contentType: 'application/json; charset=utf-8',
-            success: function (data) {
-                console.log(data);
-                GridViewPartial_LiquidacionRetencionClienteXCruzar.PerformCallback();
-                GridViewPartial_LiquidacionRetencionClienteXCruzar.UnselectRows();
-                $("#LiquidacionModal").modal("show");
-
-            },
-            error: function (error) {
-            }
-        });
-    }
-
-    function AddLiquidacionDetalle() {
-        console.log(selectedIDs);
-        var datos = {
-            IDs: selectedIDs,
-            IdTransaccionSession: $("#IdTransaccionSession").val()
-        }
-        $.ajax({
-            type: 'POST',
-            data: JSON.stringify(datos),
-            url: '@Url.Action("EditingAddNewDetalle", "LiquidacionRetencionCliente", new { Area = "CuentasPorCobrar"})',
-            async: false,
-            bDeferRender: true,
-            bProcessing: true,
-            dataType: 'json',
-            contentType: 'application/json; charset=utf-8',
-            success: function (data) {
-            },
-            error: function (error) {
-            }
-        });
-        selectedIDs = "";
-        GridViewPartial_LiquidacionRetencionClienteXCruzar.PerformCallback();
-        GridViewPartial_LiquidacionRetencionClienteXCruzar.UnselectRows();
-        GridViewPartial_LiquidacionRetencionClienteDet.PerformCallback();
-        $("#LiquidacionModal").modal("hide");
-    }
-
-    function armar_diario() {
-        var datos = {
-            IdTransaccionSession: $("#IdTransaccionSession").val()
-        }
-        $.ajax({
-            type: 'POST',
-            data: JSON.stringify(datos),
-            url: '@Url.Action("armar_diario", "LiquidacionRetencionCliente", new { Area = "CuentasPorCobrar" })',
-            async: false,
-            bDeferRender: true,
-            bProcessing: true,
-            dataType: 'json',
-            contentType: 'application/json; charset=utf-8',
-            success: function (data) {
-                GridView_comprobante_detalle.PerformCallback();
-            },
-            error: function (error) {
-            }
-        });
-    };
-</script>
-@using (Html.BeginForm("Nuevo", "LiquidacionRetencionCliente", FormMethod.Post, new { @class = "form", @role = "form" }))
+@using (Html.BeginForm("Anular", "LiquidacionRetencionCliente", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdLiquidacion, new { @id = "IdLiquidacion" })
     if (@ViewBag.mensaje != null)
     {
         <div class="alert alert-warning alert-dismissible">
@@ -113,29 +21,6 @@
             </h4>
         </div>
     }
-    <div class="modal fade" id="LiquidacionModal" role="dialog">
-        <div class="modal-dialog modal-lg">
-            <!-- Modal content-->
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Liquidaciones pendientes</h4>
-                    <h4 id="TotalRows" align="right"></h4>
-                </div>
-                <div class="modal-body">
-
-                    @Html.Action("GridViewPartial_LiquidacionRetencionClienteXCruzar")
-
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" onclick="AddLiquidacionDetalle();">Aceptar</button>
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
-                </div>
-            </div>
-
-        </div>
-    </div>
-    @Html.HiddenFor(q => q.IdEmpresa)
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-4">
@@ -179,9 +64,11 @@
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
-                <button type="button" class="btn btn-primary" title="Buscar cobros" id="btn_buscar" onclick="MostrarModal();">
-                    <i class="fa fa-search"></i>
-                </button>
+                <div class="form-group">
+                    <label for="cr_saldo">Motivo de anulación</label>
+                    @Html.TextBoxFor(q => q.MotivoAnulacion, new { @id = "Observacion", @class = "form-control" })
+                    @Html.ValidationMessageFor(q => q.MotivoAnulacion, "", new { @class = "text-danger" })
+                </div>
             </div>
         </div>
     </div>
@@ -221,7 +108,7 @@
         </div>
     </div>
     <div class="box-footer">
-        <button type="submit" class="btn btn-primary">Guardar</button>
+        <button type="submit" class="btn btn-danger">Anular</button>
         <a class="btn btn-default" href="@Url.Action("Index", "LiquidacionRetencionCliente", new { Area = "CuentasPorCobrar" }, null)">Cancelar</a>
     </div>
     @section Scripts {
