--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/LiquidacionRetencionCliente/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/LiquidacionRetencionCliente/Modificar.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.CuentasPorCobrar.cxc_LiquidacionRetProv_Info
 @{
-    ViewBag.Title = "Nueva liquidacion de retenciones a clientes";
+    ViewBag.Title = "Modificar liquidacion de retenciones a clientes";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
@@ -101,10 +101,14 @@
         });
     };
 </script>
-@using (Html.BeginForm("Nuevo", "LiquidacionRetencionCliente", FormMethod.Post, new { @class = "form", @role = "form" }))
+@using (Html.BeginForm("Modificar", "LiquidacionRetencionCliente", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdLiquidacion, new { @id = "IdLiquidacion" })
+    @Html.HiddenFor(q => q.IdTipoCbte, new { @id = "IdTipoCbte" })
+    @Html.HiddenFor(q => q.IdCbteCble, new { @id = "IdCbteCble" })
+            
     if (@ViewBag.mensaje != null)
     {
         <div class="alert alert-warning alert-dismissible">
@@ -118,7 +122,7 @@
             <!-- Modal content-->
             <div class="modal-content">
                 <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <button type = "button" class="close" data-dismiss="modal">&times;</button>
                     <h4 class="modal-title">Liquidaciones pendientes</h4>
                     <h4 id="TotalRows" align="right"></h4>
                 </div>
@@ -173,15 +177,6 @@
                     @Html.TextBoxFor(q => q.Observacion, new { @id = "Observacion", @class = "form-control" })
                     @Html.ValidationMessageFor(q => q.Observacion, "", new { @class = "text-danger" })
                 </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-12">
-                <button type="button" class="btn btn-primary" title="Buscar cobros" id="btn_buscar" onclick="MostrarModal();">
-                    <i class="fa fa-search"></i>
-                </button>
             </div>
         </div>
     </div>
