--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/OrdenPago/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/OrdenPago/Index.cshtml
@@ -111,10 +111,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-2">
+                    <div class="col-md-1">
                         <div class="form-group">
-                            <label for=""></label>
-                            <button type="button" class="btn btn-primary" id="btn_imprimir" onclick="ImprimirListado();" title="Imprimir ordenes seleccionadas">
+                            <label for="">             </label>
+                            <button type="button" class="btn btn-primary form-control" id="btn_imprimir" onclick="ImprimirListado();" title="Imprimir ordenes seleccionadas">
                                 <i class="fa fa-print"></i>
                             </button>
                         </div>
