--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/Cobranza/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/Cobranza/Modificar.cshtml
@@ -187,9 +187,9 @@
         GridView_cobranza_det.PerformCallback();
     }
 
-    function Imprimir() {
+  function Imprimir() {
         var location = GetPathServer();
-        var win = window.open(location +"/Reportes/ContabilidadReportes/CONTA_001?IdEmpresa="+@Core.Erp.Web.Helps.SessionFixed.IdEmpresa+"&IdTipoCbte="+@Model.IdTipoCbte+"&IdCbteCble="+@Model.IdCbteCble, '_blank');
+        var win = window.open(location +"/Reportes/CuentasPorCobrarReportes/CXC_001?IdEmpresa="+@Core.Erp.Web.Helps.SessionFixed.IdEmpresa+"&IdSucursal="+@Model.IdSucursal+"&IdCobro="+@Model.IdCobro, '_blank');
         win.focus();
     }
 </script>
