--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/LiquidacionRetencionCliente/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/LiquidacionRetencionCliente/Modificar.cshtml
@@ -100,9 +100,9 @@
             }
         });
     };
-    function Imprimir() {
+   function Imprimir() {
         var location = GetPathServer();
-        var win = window.open(location +"/Reportes/ContabilidadReportes/CONTA_001?IdEmpresa="+@Core.Erp.Web.Helps.SessionFixed.IdEmpresa+"&IdSucursal="+@Model.IdSucursal+"&IdCobro="+@Model.IdCobro, '_blank');
+        var win = window.open(location +"/Reportes/ContabilidadReportes/CONTA_001?IdEmpresa="+@Core.Erp.Web.Helps.SessionFixed.IdEmpresa+"&IdTipoCbte="+@Model.IdTipoCbte+"&IdCbteCble="+@Model.IdCbteCble, '_blank');
         win.focus();
     }
 </script>
