--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/LiquidacionRetencionCliente/_GridViewPartial_LiquidacionRetencionClienteDet.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/LiquidacionRetencionCliente/_GridViewPartial_LiquidacionRetencionClienteDet.cshtml
@@ -24,7 +24,11 @@
         settings.SettingsBehavior.EnableCustomizationWindow = true;
         settings.SettingsContextMenu.EnableRowMenu = DefaultBoolean.True;
 
-        settings.SettingsBehavior.AllowSelectByRowClick = true;
+        settings.SettingsBehavior.AllowSelectByRowClick = false;
+
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.Control;
 
         //Configuracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
@@ -36,16 +40,15 @@
 
         settings.Columns.Add(column =>
         {
-            column.Width = Unit.Percentage(10);
+            column.Width = Unit.Percentage(7);
             column.FieldName = "IdCobro";
             column.Caption = "# Cobro";
         });
         settings.Columns.Add(column =>
         {
-            column.Width = Unit.Percentage(10);
-            column.FieldName = "cr_NumDocumento";
-            column.Caption = "# Retencion";
-            column.EditFormSettings.Visible = DefaultBoolean.False;
+            column.Width = Unit.Percentage(28);
+            column.FieldName = "pe_nombreCompleto";
+            column.Caption = "Cliente";
         });
         settings.Columns.Add(column =>
         {
@@ -57,7 +60,21 @@
         });
         settings.Columns.Add(column =>
         {
-            column.Width = Unit.Percentage(50);
+            column.Width = Unit.Percentage(10);
+            column.FieldName = "vt_NumFactura";
+            column.Caption = "# Factura";
+        });
+        settings.Columns.Add(column =>
+        {
+            column.Width = Unit.Percentage(10);
+            column.FieldName = "cr_NumDocumento";
+            column.Caption = "# Retencion";
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+        });
+
+        settings.Columns.Add(column =>
+        {
+            column.Width = Unit.Percentage(15);
             column.FieldName = "tc_descripcion";
             column.Caption = "Tipo retencion";
         });
