--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/CuentasPorCobrarReportes/CXC_010.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/CuentasPorCobrarReportes/CXC_010.cshtml
@@ -80,14 +80,26 @@
                     </div>
                     <div class="col-md-2">
                         <div class="form-group">
-                            <label for="Check1"></label>
-                            @Html.DevExpress().CheckBoxFor(q => q.Check2, settings =>
-                           {
-                               settings.Name = "Check2";
-                               settings.Text = "Quitar grupos";
+                            <div class="checkbox">
+                                @Html.DevExpress().CheckBoxFor(q => q.Check2, settings =>
+                               {
+                                   settings.Name = "Check2";
+                                   settings.Text = "Quitar grupos";
 
-                           }).GetHtml()
-                            @Html.ValidationMessageFor(q => q.Check2, "", new { @class = "text-danger" })
+                               }).GetHtml()
+                                @Html.ValidationMessageFor(q => q.Check2, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label for="IdCliente">Cliente</label>
+                            @Html.Partial("_CmbClientePorTipo", Model.IdCliente)
+                            @Html.ValidationMessageFor(q => q.IdCliente, "", new { @class = "text-danger", @id = "IdCliente" })
                         </div>
                     </div>
                     <div class="col-md-2">
@@ -95,17 +107,6 @@
                             <label for="Descripcion">Dias Vencimiento*</label>
                             @Html.TextBoxFor(q => q.DiasVencidos, new { @class = "form-control" })
                             @Html.ValidationMessageFor(q => q.DiasVencidos, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="col-md-5">
-                        <div class="form-group">
-                            <label for="IdCliente">Cliente</label>
-                            @Html.Partial("_CmbClientePorTipo", Model.IdCliente)
-                            @Html.ValidationMessageFor(q => q.IdCliente, "", new { @class = "text-danger", @id = "IdCliente" })
                         </div>
                     </div>
                 </div>
