--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/NominaTipo/_GridViewPartial_nomina_tipo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/NominaTipo/_GridViewPartial_nomina_tipo.cshtml
@@ -63,8 +63,8 @@
                 if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
                 {
                     ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdNomina_Tipo = DataBinder.Eval(tc.DataItem, "IdNomina_Tipo") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdNomina_Tipo = DataBinder.Eval(tc.DataItem, "IdNomina_Tipo") },
+                Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdNomina_Tipo = DataBinder.Eval(tc.DataItem, "IdNomina_Tipo") }) + "&nbsp;" +
+                        Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdNomina_Tipo = DataBinder.Eval(tc.DataItem, "IdNomina_Tipo") },
                             new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
                     );
                 }
@@ -72,7 +72,7 @@
             c.SetHeaderTemplateContent(tc =>
             {
                 ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo").ToHtmlString()
+                    Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa = Core.Erp.Web.Helps.SessionFixed.IdEmpresa }).ToHtmlString()
                 );
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
